<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapQuack Calculus</string>
    <string name="action_settings">Settings</string>
    <string name="x">X</string>
    <string name="One"> 1 </string>
    <string name="Two"> 2 </string>
    <string name="Three"> 3 </string>
    <string name="Four"> 4 </string>
    <string name="Five"> 5 </string>
    <string name="Six"> 6 </string>
    <string name="Seven"> 7 </string>
    <string name="Eight"> 8 </string>
    <string name="Nine"> 9 </string>
    <string name="Zero"> 0 </string>
    <string name="Plus"> + </string>
    <string name="Minus"> - </string>
    <string name="Mult"> * </string>
    <string name="Divide"> / </string>
    <string name="Open"> ( </string>
    <string name="Close"> ) </string>
    <string name="Power"> ^ </string>
    <string name="Decimal"> . </string>
    <string name="PI"> π </string>
    <string name="input">f(x)=</string>
    <string name="CLEAR">CLEAR</string>
    <string name="SUBS">Substitute</string>
    <string name="DERIVE">Derive</string>
    <string name="D_and_S">Derive + Simplify</string>
    <string name="Functions">Functions</string>
    <string name="DEL">del</string>
    <string name="Integrate">Integrate</string>
    <string name="Simplify">Simplify</string>
    <string name="SIN">SIN</string>
    <string name="COS">COS</string>
    <string name="TAN">TAN</string>
    <string name="ARCSIN">ARCSIN</string>
    <string name="ARCCOS">ARCCOS</string>
    <string name="ARCTAN">ARCTAN</string>
    <string name="SEC">SEC</string>
    <string name="CSC">CSC</string>
    <string name="COT">COT</string>
    <string name="ARCSEC">ARCSEC</string>
    <string name="ARCCSC">ARCCSC</string>
    <string name="ARCCOT">ARCCOT</string>
    <string name="ABS">ABS</string>
    <string name="LN">LN</string>
    <string name="EXP">EXP</string>
    <string name="BACK">BACK</string>
    <string name="upper">Upper Bound</string>
    <string name="lower">Lower Bound</string>

</resources>