<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/input"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/SIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputSin"
            android:text="@string/SIN" />

        <Button
            android:id="@+id/COS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputCos"
            android:text="@string/COS" />

        <Button
            android:id="@+id/TAN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputTan"
            android:text="@string/TAN" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/ARCSIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputArcsin"
            android:text="@string/ARCSIN" />

        <Button
            android:id="@+id/ARCCOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputArccos"
            android:text="@string/ARCCOS" />

        <Button
            android:id="@+id/ARCTAN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputArctan"
            android:text="@string/ARCTAN" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/SEC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputSec"
            android:text="@string/SEC" />

        <Button
            android:id="@+id/CSC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputCsc"
            android:text="@string/CSC" />

        <Button
            android:id="@+id/COT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputCot"
            android:text="@string/COT" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/ARCSEC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputArcsec"
            android:text="@string/ARCSEC" />

        <Button
            android:id="@+id/ARCCSC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputArccsc"
            android:text="@string/ARCCSC" />

        <Button
            android:id="@+id/ARCCOT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputArccot"
            android:text="@string/ARCCOT" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout4"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/LN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputLn"
            android:text="@string/LN" />

        <Button
            android:id="@+id/EXP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputExp"
            android:text="@string/EXP" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout5"
        android:layout_below="@+id/linearLayout5"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/DEL"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="delete"
            android:text="@string/DEL" />

        <Button
            android:id="@+id/CLEAR"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="clear"
            android:text="@string/CLEAR" />

        <Button
            android:id="@+id/BACK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="mainPage"
            android:text="@string/BACK" />
    </LinearLayout>

</RelativeLayout>