<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/input"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/Seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputSeven"
            android:text="@string/Seven" />

        <Button
            android:id="@+id/Eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputEight"
            android:text="@string/Eight" />

        <Button
            android:id="@+id/Nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputNine"
            android:text="@string/Nine" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/Four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputFour"
            android:text="@string/Four" />

        <Button
            android:id="@+id/Five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputFive"
            android:text="@string/Five" />

        <Button
            android:id="@+id/Six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputSix"
            android:text="@string/Six" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/One"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputOne"
            android:text="@string/One" />

        <Button
            android:id="@+id/Two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputTwo"
            android:text="@string/Two" />

        <Button
            android:id="@+id/Three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputThree"
            android:text="@string/Three" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/Zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputZero"
            android:text="@string/Zero" />

        <Button
            android:id="@+id/Decimal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputDecimal"
            android:text="@string/Decimal" />

        <Button
            android:id="@+id/PI"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="inputPi"
            android:text="@string/PI" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout4"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/substitute"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/button_selector"
            android:onClick="substituteValue"
            android:text="@string/SUBS"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout5"
        android:layout_below="@+id/linearLayout5"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/DEL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="delete"
            android:text="@string/DEL" />

        <Button
            android:id="@+id/CLEAR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="clear"
            android:text="@string/CLEAR" />

        <Button
            android:id="@+id/BACK"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="mainPagefromOther"
            android:text="@string/BACK" />
    </LinearLayout>

</RelativeLayout>